--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Hello Coursera!</title>
 </head>
 <body>
-    <h1>helo coursera!</h1>
+    <h1>helo coursera! great course </h1>
 </body>
 </html>
